force-app/main/default/objects/AcctSeed__Bank_Rule__c/fields/AcctSeed__Apply_To_All_Financial_Accounts__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Apply_To_All_Financial_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Apply the Bank Rule to transactions from all financial institution accounts.</inlineHelpText>
    <label>Apply To All Financial Accounts</label>
    <type>Checkbox</type>
</CustomField>