force-app/main/default/objects/AcctSeed__Bank_Rule__c/fields/AcctSeed__Priority__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Priority__c</fullName>
    <inlineHelpText>When a Bank Rule runs relative to other bank rules. A rule with a priority of 1 will run before a rule with priority of 2.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>