force-app/main/default/objects/AcctSeed__Bank_Rule__c/fields/AcctSeed__Source_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source_Record_Type__c</fullName>
    <inlineHelpText>The type of source document to create if the Bank Rule&apos;s conditions are met.</inlineHelpText>
    <label>Source Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AcctSeed__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AcctSeed__Cash_Disbursement__c</fullName>
                <label>Cash Disbursement</label>
            </value>
            <value>
                <fullName>AcctSeed__Cash_Receipt__c</fullName>
                <label>Cash Receipt</label>
            </value>
            <value>
                <fullName>AcctSeed__Journal_Entry_Line__c</fullName>
                <label>Journal Entry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>