force-app/main/default/objects/AcctSeed__Bank_Rule__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <inlineHelpText>The type of transactions to which the Bank Rule applies.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash_In</fullName>
                <default>true</default>
                <label>Cash In</label>
            </value>
            <value>
                <fullName>Cash_Out</fullName>
                <label>Cash Out</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>